<resources>
    <string name="app_name">MyShoppingNotes</string>
    <string name="Login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Signup">Don\'t have an account ? Sign up here</string>
    <string name="Title">Shopping List</string>
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
</resources>
